--- a/package.json
+++ b/package.json
@@ -3,5 +3,8 @@
     "ts-node": "^10.8.1",
     "tsc": "^2.0.4",
     "typescript": "^4.7.4"
+  },
+  "dependencies": {
+    "@datastructures-js/priority-queue": "^6.3.1"
   }
 }
