--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,7 @@
 {
   "compilerOptions": {
-    "target": "ESNext",
+    "target": "ES2015",
+    "lib": ["DOM", "ESNext", "ES2023.Array"],
     "module": "commonjs",
     "skipLibCheck": true,
     "sourceMap": true
