--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "typescript": "^5.5.4"
   },
   "dependencies": {
-    "@datastructures-js/priority-queue": "^6.3.1"
+    "@datastructures-js/priority-queue": "^6.3.1",
+    "ts-toolbelt": "^9.6.0"
   }
 }
